# rtfstruct

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/: parse_generated.py
deprecated/: 00_project_brief.md  01_project_layout_and_reference_paths.md  02_notice_and_license.md  03_documentation_and_commenting_standard.md  04_source_mapping.md  05_ast_contract.md  06_parser_porting_plan.md  07_json_export_contract.md  08_markdown_export_contract.md  09_rtf_writer_contract.md  10_testing_strategy.md  11_error_recovery_and_diagnostics.md  12_performance_strategy.md  13_public_api.md  14_unsupported_features.md  15_milestones.md  16_extra_considerations.md  17_seed_prompt.md  18_milestone_0_source_mapping_notes.md  README.md
docs/: api.md  ast.md  cli.md  conf.py  contributing.md  diagnostics.md  index.html  index.md  integrations.md  json.md  markdown.md  parser.md  performance.md  writer.md
docs/_static/: lumen.css
docs/_templates/: layout.html
reference/rtftest/test_rtf_files/: Tables-Full-Word.rtf  Tables-Full.rtf  Tables-MergeCol-Word.rtf  Tables-MergeCol.rtf  Tables-MergeRow-Word.rtf  Tables-MergeRow.rtf  sample01.rtf  sample02.rtf  sample03.rtf  sample04.rtf  sample05.rtf  sample06.rtf  sample07.rtf
src/rtfstruct/: __init__.py  ast.py  cli.py  control_words.py  destinations.py  diagnostics.py  exceptions.py  json_export.py  lexer.py  lists.py  markdown.py  options.py  parser_state.py  reader.py  tables.py  tokens.py  writer.py
src/rtfstruct/integrations/: __init__.py  _shared.py  docling.py  markitdown.py  unstructured.py
src/rtfstruct/utils/: __init__.py  escaping.py  units.py
tests/: test_annotations.py  test_cli.py  test_docstrings.py  test_fields.py  test_footnotes.py  test_fuzz_recovery.py  test_golden_exports.py  test_images.py  test_integrations.py  test_lexer.py  test_license_headers.py  test_lists.py  test_markdown.py  test_metadata.py  test_public_api.py  test_reader.py  test_reference_fixtures.py  test_security_limits.py  test_static_docs.py  test_tables.py  test_unicode_recovery.py  test_utils.py  test_writer.py
tests/fixtures/: golden_basic.rtf
tests/golden/: golden_basic.json  golden_basic.md
