# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Lee Powell

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtfstruct"
version = "0.1.0"
description = "Read RTF as structure, not just text. Part of Sourcetrace by Lumen & Lever."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Lee Powell" },
]
maintainers = [
  { name = "Lee Powell" },
]
keywords = [
  "rtf",
  "parser",
  "document-structure",
  "ast",
  "ai-ingestion",
  "sourcetrace",
  "lumen-and-lever",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://lumenandlever.com"
Documentation = "https://lumenandlever.com/tools/sourcetrace-rtf"
Source = "https://github.com/keny369/rtfstruct"
Issues = "https://github.com/keny369/rtfstruct/issues"
"Lumen & Lever" = "https://lumenandlever.com"
"Sourcetrace" = "https://lumenandlever.com/tools"

[project.scripts]
rtfstruct = "rtfstruct.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rtfstruct"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
